sandbox/JoltC/Functions.h

////////////////////////////////////////////////////////////////////////////////
// Primitive types

typedef struct JPC_Float3 {
	float x;
	float y;
	float z;
} JPC_Float3;
typedef struct JPC_Vec3 {
	 float x;
	float y;
	float z;
	float _w;
} JPC_Vec3;
typedef uint32_t JPC_SubShapeID;
typedef struct JPC_IndexedTriangle {
	uint32_t idx[3];
	uint32_t materialIndex;
	uint32_t userData;
} JPC_IndexedTriangle;
typedef struct JPC_Body JPC_Body;
////////////////////////////////////////////////////////////////////////////////
// VertexList == Array<Float3> == std::vector<Float3>

typedef struct JPC_VertexList JPC_VertexList;
extern JPC_VertexList* JPC_VertexList_new(const JPC_Float3* storage, size_t len);
extern void JPC_VertexList_delete(JPC_VertexList* object);
////////////////////////////////////////////////////////////////////////////////
// IndexedTriangleList == Array<IndexedTriangle> == std::vector<IndexedTriangle>

typedef struct JPC_IndexedTriangleList JPC_IndexedTriangleList;
extern JPC_IndexedTriangleList* JPC_IndexedTriangleList_new(const JPC_IndexedTriangle* storage, size_t len);
extern void JPC_IndexedTriangleList_delete(JPC_IndexedTriangleList* object);
////////////////////////////////////////////////////////////////////////////////
// Shape -> RefTarget<Shape>

typedef struct JPC_Shape JPC_Shape;
extern uint32_t JPC_Shape_GetRefCount(const JPC_Shape* self);
extern void JPC_Shape_AddRef(const JPC_Shape* self);
extern void JPC_Shape_Release(const JPC_Shape* self);
extern uint64_t JPC_Shape_GetUserData(const JPC_Shape* self);
extern void JPC_Shape_SetUserData(JPC_Shape* self, uint64_t userData);
extern JPC_ShapeType JPC_Shape_GetType(const JPC_Shape* self);
extern JPC_ShapeSubType JPC_Shape_GetSubType(const JPC_Shape* self);
extern uint64_t JPC_Shape_GetSubShapeUserData(const JPC_Shape* self, JPC_SubShapeID inSubShapeID);
extern JPC_Vec3 JPC_Shape_GetCenterOfMass(const JPC_Shape* self);
extern float JPC_Shape_GetVolume(const JPC_Shape* self);
////////////////////////////////////////////////////////////////////////////////
// CompoundShape -> Shape -> RefTarget<Shape>

typedef struct JPC_CompoundShape JPC_CompoundShape;
// FIXME: The real API should return a new type, JPC_CompoundShape_SubShape*
extern const JPC_Shape* JPC_CompoundShape_GetSubShape_Shape(
	const JPC_CompoundShape* self,
	uint inIdx);
extern uint32_t JPC_CompoundShape_GetSubShapeIndexFromID(
	const JPC_CompoundShape* self,
	JPC_SubShapeID inSubShapeID,
	JPC_SubShapeID* outRemainder);
////////////////////////////////////////////////////////////////////////////////
// TempAllocatorImpl

typedef struct JPC_TempAllocatorImpl JPC_TempAllocatorImpl;
extern JPC_TempAllocatorImpl* JPC_TempAllocatorImpl_new(uint size);
extern void JPC_TempAllocatorImpl_delete(JPC_TempAllocatorImpl* object);
typedef struct JPC_JobSystemThreadPool JPC_JobSystemThreadPool;
typedef struct JPC_JobSystemSingleThreaded JPC_JobSystemSingleThreaded;
extern JPC_JobSystemThreadPool* JPC_JobSystemThreadPool_new2(
	uint inMaxJobs,
	uint inMaxBarriers);
extern JPC_JobSystemThreadPool* JPC_JobSystemThreadPool_new3(
	uint inMaxJobs,
	uint inMaxBarriers,
	int inNumThreads);
extern void JPC_JobSystemThreadPool_delete(JPC_JobSystemThreadPool* object);
extern JPC_JobSystemSingleThreaded* JPC_JobSystemSingleThreaded_new(uint inMaxJobs);
extern void JPC_JobSystemSingleThreaded_delete(JPC_JobSystemSingleThreaded* object);
typedef struct JPC_GroupFilter JPC_GroupFilter;
typedef struct JPC_GroupFilterFns {
	bool (*CanCollide)(const void *self, const JPC_CollisionGroup* inGroup1, const JPC_CollisionGroup* inGroup2);
} JPC_GroupFilterFns;
extern JPC_GroupFilter* JPC_GroupFilter_new(
	const void *self,
	JPC_GroupFilterFns fns);
extern void JPC_GroupFilter_delete(JPC_GroupFilter* object);
////////////////////////////////////////////////////////////////////////////////
// BroadPhaseLayerInterface

typedef struct JPC_BroadPhaseLayerInterfaceFns {
	uint (*GetNumBroadPhaseLayers)(const void *self);
	JPC_BroadPhaseLayer (*GetBroadPhaseLayer)(const void *self, JPC_ObjectLayer inLayer);
} JPC_BroadPhaseLayerInterfaceFns;
typedef struct JPC_BroadPhaseLayerInterface JPC_BroadPhaseLayerInterface;
extern JPC_BroadPhaseLayerInterface* JPC_BroadPhaseLayerInterface_new(
	const void *self,
	JPC_BroadPhaseLayerInterfaceFns fns);
extern void JPC_BroadPhaseLayerInterface_delete(JPC_BroadPhaseLayerInterface* object);
////////////////////////////////////////////////////////////////////////////////
// BroadPhaseLayerFilter

typedef struct JPC_BroadPhaseLayerFilterFns {
	bool (*ShouldCollide)(const void *self, JPC_BroadPhaseLayer inLayer);
} JPC_BroadPhaseLayerFilterFns;
typedef struct JPC_BroadPhaseLayerFilter JPC_BroadPhaseLayerFilter;
extern JPC_BroadPhaseLayerFilter* JPC_BroadPhaseLayerFilter_new(
	const void *self,
	JPC_BroadPhaseLayerFilterFns fns);
extern void JPC_BroadPhaseLayerFilter_delete(JPC_BroadPhaseLayerFilter* object);
////////////////////////////////////////////////////////////////////////////////
// ObjectLayerFilter

typedef struct JPC_ObjectLayerFilterFns {
	bool (*ShouldCollide)(const void *self, JPC_ObjectLayer inLayer);
} JPC_ObjectLayerFilterFns;
typedef struct JPC_ObjectLayerFilter JPC_ObjectLayerFilter;
extern JPC_ObjectLayerFilter* JPC_ObjectLayerFilter_new(
	const void *self,
	JPC_ObjectLayerFilterFns fns);
extern void JPC_ObjectLayerFilter_delete(JPC_ObjectLayerFilter* object);
////////////////////////////////////////////////////////////////////////////////
// BodyFilter

typedef struct JPC_BodyFilterFns {
	bool (*ShouldCollide)(const void *self, JPC_BodyID inBodyID);
	bool (*ShouldCollideLocked)(const void *self, const JPC_Body *inBodyID);
} JPC_BodyFilterFns;
typedef struct JPC_BodyFilter JPC_BodyFilter;
extern JPC_BodyFilter* JPC_BodyFilter_new(
	const void *self,
	JPC_BodyFilterFns fns);
extern void JPC_BodyFilter_delete(JPC_BodyFilter* object);
////////////////////////////////////////////////////////////////////////////////
// ShapeFilter

typedef struct JPC_ShapeFilterFns {
	bool (*ShouldCollide)(const void *self, const JPC_Shape *inShape2, JPC_SubShapeID inSubShapeIDOfShape2);

	bool (*ShouldCollideTwoShapes)(const void *self,
		const JPC_Shape *inShape1, JPC_SubShapeID inSubShapeIDOfShape1,
		const JPC_Shape *inShape2, JPC_SubShapeID inSubShapeIDOfShape2);
} JPC_ShapeFilterFns;
typedef struct JPC_ShapeFilter JPC_ShapeFilter;
extern JPC_ShapeFilter* JPC_ShapeFilter_new(
	const void *self,
	JPC_ShapeFilterFns fns);
extern void JPC_ShapeFilter_delete(JPC_ShapeFilter* object);
////////////////////////////////////////////////////////////////////////////////
// SimShapeFilter

typedef struct JPC_SimShapeFilterFns {
	bool (*ShouldCollide)(
		const void *self,
		const JPC_Body *inBody1, const JPC_Shape *inShape1, JPC_SubShapeID inSubShapeIDOfShape1,
		const JPC_Body *inBody2, const JPC_Shape *inShape2, JPC_SubShapeID inSubShapeIDOfShape2);
} JPC_SimShapeFilterFns;
typedef struct JPC_SimShapeFilter JPC_SimShapeFilter;
extern JPC_SimShapeFilter* JPC_SimShapeFilter_new(
	const void *self,
	JPC_SimShapeFilterFns fns);
extern void JPC_SimShapeFilter_delete(JPC_SimShapeFilter* object);
////////////////////////////////////////////////////////////////////////////////
// ObjectVsBroadPhaseLayerFilter

typedef struct JPC_ObjectVsBroadPhaseLayerFilterFns {
	bool (*ShouldCollide)(const void *self, JPC_ObjectLayer inLayer1, JPC_BroadPhaseLayer inLayer2);
} JPC_ObjectVsBroadPhaseLayerFilterFns;
typedef struct JPC_ObjectVsBroadPhaseLayerFilter JPC_ObjectVsBroadPhaseLayerFilter;
extern JPC_ObjectVsBroadPhaseLayerFilter* JPC_ObjectVsBroadPhaseLayerFilter_new(
	const void *self,
	JPC_ObjectVsBroadPhaseLayerFilterFns fns);
extern void JPC_ObjectVsBroadPhaseLayerFilter_delete(JPC_ObjectVsBroadPhaseLayerFilter* object);
////////////////////////////////////////////////////////////////////////////////
// ObjectLayerPairFilter

typedef struct JPC_ObjectLayerPairFilterFns {
	bool (*ShouldCollide)(const void *self, JPC_ObjectLayer inLayer1, JPC_ObjectLayer inLayer2);
} JPC_ObjectLayerPairFilterFns;
typedef struct JPC_ObjectLayerPairFilter JPC_ObjectLayerPairFilter;
extern JPC_ObjectLayerPairFilter* JPC_ObjectLayerPairFilter_new(
	const void *self,
	JPC_ObjectLayerPairFilterFns fns);
extern void JPC_ObjectLayerPairFilter_delete(JPC_ObjectLayerPairFilter* object);
typedef struct JPC_ContactManifold {
	JPC_RVec3 BaseOffset;
	JPC_Vec3 WorldSpaceNormal;
	float PenetrationDepth;
	JPC_SubShapeID SubShapeID1;
	JPC_SubShapeID SubShapeID2;
	JPC_ContactPoints RelativeContactPointsOn1;
	JPC_ContactPoints RelativeContactPointsOn2;
} JPC_ContactManifold;
typedef struct JPC_ContactListenerFns {
	JPC_ValidateResult (*OnContactValidate)(
		void *self,
		const JPC_Body *inBody1,
		const JPC_Body *inBody2,
		JPC_RVec3 inBaseOffset,
		const JPC_CollideShapeResult *inCollisionResult);

	void (*OnContactAdded)(
		void *self,
		const JPC_Body *inBody1,
		const JPC_Body *inBody2,
		const JPC_ContactManifold *inManifold,
		JPC_ContactSettings *ioSettings);

	void (*OnContactPersisted)(
		void *self,
		const JPC_Body *inBody1,
		const JPC_Body *inBody2,
		const JPC_ContactManifold *inManifold,
		JPC_ContactSettings *ioSettings);

	void (*OnContactRemoved)(
		void *self,
		const JPC_SubShapeIDPair *inSubShapePair);
} JPC_ContactListenerFns;
typedef struct JPC_ContactListener JPC_ContactListener;
extern JPC_ContactListener* JPC_ContactListener_new(
	void *self,
	JPC_ContactListenerFns fns);
extern void JPC_ContactListener_delete(JPC_ContactListener* object);
typedef struct JPC_CollisionEstimationResult {
	JPC_Vec3 LinearVelocity1;				///< The estimated linear velocity of body 1 after collision
	JPC_Vec3 AngularVelocity1;				///< The estimated angular velocity of body 1 after collision
	JPC_Vec3 LinearVelocity2;				///< The estimated linear velocity of body 2 after collision
	JPC_Vec3 AngularVelocity2;				///< The estimated angular velocity of body 2 after collision

	JPC_Vec3 Tangent1;						///< Normalized tangent of contact normal
	JPC_Vec3 Tangent2;						///< Second normalized tangent of contact normal (forms a basis with mTangent1 and mWorldSpaceNormal)

	uint NumImpulses;
	JPC_Impulse Impulses[64];
} JPC_CollisionEstimationResult;
extern void JPC_EstimateCollisionResponse(
	const JPC_Body* inBody1,
	const JPC_Body* inBody2,
	const JPC_ContactManifold* inManifold,
	JPC_CollisionEstimationResult* outResult,
	float inCombinedFriction,
	float inCombinedRestitution,
	float inMinVelocityForRestitution,	///< = 1.0f
	uint inNumIterations				///< = 10
);