sandbox/JoltC/fp_jolt.pas


  PJPC_Body = type Pointer;
  PPJPC_Body = ^PJPC_Body;
  PJPC_VertexList = type Pointer;

function JPC_VertexList_new(storage: PJPC_Float3; len: Tsize_t): PJPC_VertexList; cdecl; external joltc;
procedure JPC_VertexList_delete(obj: PJPC_VertexList); cdecl; external joltc;

type
  PJPC_IndexedTriangleList = type Pointer;

function JPC_IndexedTriangleList_new(storage: PJPC_IndexedTriangle; len: Tsize_t): PJPC_IndexedTriangleList; cdecl; external joltc;
procedure JPC_IndexedTriangleList_delete(obj: PJPC_IndexedTriangleList); cdecl; external joltc;

type
  PJPC_Shape = type Pointer;
  PPJPC_Shape = ^PJPC_Shape;

function JPC_Shape_GetRefCount(self: PJPC_Shape): Tuint32_t; cdecl; external joltc;
procedure JPC_Shape_AddRef(self: PJPC_Shape); cdecl; external joltc;
procedure JPC_Shape_Release(self: PJPC_Shape); cdecl; external joltc;
function JPC_Shape_GetUserData(self: PJPC_Shape): Tuint64_t; cdecl; external joltc;
procedure JPC_Shape_SetUserData(self: PJPC_Shape; userData: Tuint64_t); cdecl; external joltc;
function JPC_Shape_GetType(self: PJPC_Shape): TJPC_ShapeType; cdecl; external joltc;
function JPC_Shape_GetSubType(self: PJPC_Shape): TJPC_ShapeSubType; cdecl; external joltc;
function JPC_Shape_GetSubShapeUserData(self: PJPC_Shape; inSubShapeID: TJPC_SubShapeID): Tuint64_t; cdecl; external joltc;
function JPC_Shape_GetCenterOfMass(self: PJPC_Shape): TJPC_Vec3; cdecl; external joltc;
function JPC_Shape_GetVolume(self: PJPC_Shape): single; cdecl; external joltc;

type
  PJPC_CompoundShape = type Pointer;

function JPC_CompoundShape_GetSubShape_Shape(self: PJPC_CompoundShape; inIdx: Tuint): PJPC_Shape; cdecl; external joltc;
function JPC_CompoundShape_GetSubShapeIndexFromID(self: PJPC_CompoundShape; inSubShapeID: TJPC_SubShapeID; outRemainder: PJPC_SubShapeID): Tuint32_t; cdecl; external joltc;

type
  PJPC_TempAllocatorImpl = type Pointer;

function JPC_TempAllocatorImpl_new(size: Tuint): PJPC_TempAllocatorImpl; cdecl; external joltc;
procedure JPC_TempAllocatorImpl_delete(obj: PJPC_TempAllocatorImpl); cdecl; external joltc;

type
  PJPC_JobSystem = type Pointer;
  PJPC_JobSystemThreadPool = type Pointer;
  PJPC_JobSystemSingleThreaded = type Pointer;

function JPC_JobSystemThreadPool_new2(inMaxJobs: Tuint; inMaxBarriers: Tuint): PJPC_JobSystemThreadPool; cdecl; external joltc;
function JPC_JobSystemThreadPool_new3(inMaxJobs: Tuint; inMaxBarriers: Tuint; inNumThreads: longint): PJPC_JobSystemThreadPool; cdecl; external joltc;
procedure JPC_JobSystemThreadPool_delete(obj: PJPC_JobSystemThreadPool); cdecl; external joltc;
function JPC_JobSystemSingleThreaded_new(inMaxJobs: Tuint): PJPC_JobSystemSingleThreaded; cdecl; external joltc;
procedure JPC_JobSystemSingleThreaded_delete(obj: PJPC_JobSystemSingleThreaded); cdecl; external joltc;

type
  PJPC_GroupID = ^TJPC_GroupID;
  TJPC_GroupID = Tuint32_t;

  PJPC_SubGroupID = ^TJPC_SubGroupID;
  TJPC_SubGroupID = Tuint32_t;

  PJPC_GroupFilter = type Pointer;

  TJPC_CollisionGroup = record
    GroupFilter: PJPC_GroupFilter;
    GroupID: TJPC_GroupID;
    SubGroupID: TJPC_SubGroupID;
  end;
  PJPC_CollisionGroup = ^TJPC_CollisionGroup;

  TJPC_GroupFilterFns = record
    CanCollide: function(self: pointer; inGroup1: PJPC_CollisionGroup; inGroup2: PJPC_CollisionGroup): Tbool; cdecl;
  end;
  PJPC_GroupFilterFns = ^TJPC_GroupFilterFns;

function JPC_GroupFilter_new(self: pointer; fns: TJPC_GroupFilterFns): PJPC_GroupFilter; cdecl; external joltc;
procedure JPC_GroupFilter_delete(obj: PJPC_GroupFilter); cdecl; external joltc;

type
  TJPC_BroadPhaseLayerInterfaceFns = record
    GetNumBroadPhaseLayers: function(self: pointer): Tuint; cdecl;
    GetBroadPhaseLayer: function(self: pointer; inLayer: TJPC_ObjectLayer): TJPC_BroadPhaseLayer; cdecl;
  end;
  PJPC_BroadPhaseLayerInterfaceFns = ^TJPC_BroadPhaseLayerInterfaceFns;

  PJPC_BroadPhaseLayerInterface = type Pointer;

function JPC_BroadPhaseLayerInterface_new(self: pointer; fns: TJPC_BroadPhaseLayerInterfaceFns): PJPC_BroadPhaseLayerInterface; cdecl; external joltc;
procedure JPC_BroadPhaseLayerInterface_delete(obj: PJPC_BroadPhaseLayerInterface); cdecl; external joltc;

type
  TJPC_BroadPhaseLayerFilterFns = record
    ShouldCollide: function(self: pointer; inLayer: TJPC_BroadPhaseLayer): Tbool; cdecl;
  end;
  PJPC_BroadPhaseLayerFilterFns = ^TJPC_BroadPhaseLayerFilterFns;

  PJPC_BroadPhaseLayerFilter = type Pointer;

function JPC_BroadPhaseLayerFilter_new(self: pointer; fns: TJPC_BroadPhaseLayerFilterFns): PJPC_BroadPhaseLayerFilter; cdecl; external joltc;
procedure JPC_BroadPhaseLayerFilter_delete(obj: PJPC_BroadPhaseLayerFilter); cdecl; external joltc;

type
  TJPC_ObjectLayerFilterFns = record
    ShouldCollide: function(self: pointer; inLayer: TJPC_ObjectLayer): Tbool; cdecl;
  end;
  PJPC_ObjectLayerFilterFns = ^TJPC_ObjectLayerFilterFns;

  PJPC_ObjectLayerFilter = type Pointer;

function JPC_ObjectLayerFilter_new(self: pointer; fns: TJPC_ObjectLayerFilterFns): PJPC_ObjectLayerFilter; cdecl; external joltc;
procedure JPC_ObjectLayerFilter_delete(obj: PJPC_ObjectLayerFilter); cdecl; external joltc;

type
  TJPC_BodyFilterFns = record
    ShouldCollide: function(self: pointer; inBodyID: TJPC_BodyID): Tbool; cdecl;
    ShouldCollideLocked: function(self: pointer; inBodyID: PJPC_Body): Tbool; cdecl;
  end;
  PJPC_BodyFilterFns = ^TJPC_BodyFilterFns;

  PJPC_BodyFilter = type Pointer;

function JPC_BodyFilter_new(self: pointer; fns: TJPC_BodyFilterFns): PJPC_BodyFilter; cdecl; external joltc;
procedure JPC_BodyFilter_delete(obj: PJPC_BodyFilter); cdecl; external joltc;

type
  TJPC_ShapeFilterFns = record
    ShouldCollide: function(self: pointer; inShape2: PJPC_Shape; inSubShapeIDOfShape2: TJPC_SubShapeID): Tbool; cdecl;
    ShouldCollideTwoShapes: function(self: pointer; inShape1: PJPC_Shape; inSubShapeIDOfShape1: TJPC_SubShapeID; inShape2: PJPC_Shape; inSubShapeIDOfShape2: TJPC_SubShapeID): Tbool; cdecl;
  end;
  PJPC_ShapeFilterFns = ^TJPC_ShapeFilterFns;

  PJPC_ShapeFilter = type Pointer;

function JPC_ShapeFilter_new(self: pointer; fns: TJPC_ShapeFilterFns): PJPC_ShapeFilter; cdecl; external joltc;
procedure JPC_ShapeFilter_delete(obj: PJPC_ShapeFilter); cdecl; external joltc;

type
  TJPC_SimShapeFilterFns = record
    ShouldCollide: function(self: pointer; inBody1: PJPC_Body; inShape1: PJPC_Shape; inSubShapeIDOfShape1: TJPC_SubShapeID; inBody2: PJPC_Body;
      inShape2: PJPC_Shape; inSubShapeIDOfShape2: TJPC_SubShapeID): Tbool; cdecl;
  end;
  PJPC_SimShapeFilterFns = ^TJPC_SimShapeFilterFns;

  PJPC_SimShapeFilter = type Pointer;

function JPC_SimShapeFilter_new(self: pointer; fns: TJPC_SimShapeFilterFns): PJPC_SimShapeFilter; cdecl; external joltc;
procedure JPC_SimShapeFilter_delete(obj: PJPC_SimShapeFilter); cdecl; external joltc;

type
  TJPC_ObjectVsBroadPhaseLayerFilterFns = record
    ShouldCollide: function(self: pointer; inLayer1: TJPC_ObjectLayer; inLayer2: TJPC_BroadPhaseLayer): Tbool; cdecl;
  end;
  PJPC_ObjectVsBroadPhaseLayerFilterFns = ^TJPC_ObjectVsBroadPhaseLayerFilterFns;

  PJPC_ObjectVsBroadPhaseLayerFilter = type Pointer;

function JPC_ObjectVsBroadPhaseLayerFilter_new(self: pointer; fns: TJPC_ObjectVsBroadPhaseLayerFilterFns): PJPC_ObjectVsBroadPhaseLayerFilter; cdecl; external joltc;
procedure JPC_ObjectVsBroadPhaseLayerFilter_delete(obj: PJPC_ObjectVsBroadPhaseLayerFilter); cdecl; external joltc;

type
  TJPC_ObjectLayerPairFilterFns = record
    ShouldCollide: function(self: pointer; inLayer1: TJPC_ObjectLayer; inLayer2: TJPC_ObjectLayer): Tbool; cdecl;
  end;
  PJPC_ObjectLayerPairFilterFns = ^TJPC_ObjectLayerPairFilterFns;

  PJPC_ObjectLayerPairFilter = type Pointer;

function JPC_ObjectLayerPairFilter_new(self: pointer; fns: TJPC_ObjectLayerPairFilterFns): PJPC_ObjectLayerPairFilter; cdecl; external joltc;
procedure JPC_ObjectLayerPairFilter_delete(obj: PJPC_ObjectLayerPairFilter); cdecl; external joltc;

type
  TJPC_ContactPoints = record
    length: Tuint;
    points: array[0..63] of TJPC_Vec3;
  end;
  PJPC_ContactPoints = ^TJPC_ContactPoints;

  TJPC_ContactManifold = record
    BaseOffset: TJPC_RVec3;
    WorldSpaceNormal: TJPC_Vec3;
    PenetrationDepth: single;
    SubShapeID1: TJPC_SubShapeID;
    SubShapeID2: TJPC_SubShapeID;
    RelativeContactPointsOn1: TJPC_ContactPoints;
    RelativeContactPointsOn2: TJPC_ContactPoints;
  end;
  PJPC_ContactManifold = ^TJPC_ContactManifold;

  TJPC_ContactSettings = record
    CombinedFriction: single;
    CombinedRestitution: single;
    InvMassScale1: single;
    InvInertiaScale1: single;
    InvMassScale2: single;
    InvInertiaScale2: single;
    IsSensor: Tbool;
    RelativeLinearSurfaceVelocity: TJPC_Vec3;
    RelativeAngularSurfaceVelocity: TJPC_Vec3;
  end;
  PJPC_ContactSettings = ^TJPC_ContactSettings;

  TJPC_SubShapeIDPair = record
    Body1ID: TJPC_BodyID;
    SubShapeID1: TJPC_SubShapeID;
    Body2ID: TJPC_BodyID;
    SubShapeID2: TJPC_SubShapeID;
  end;
  PJPC_SubShapeIDPair = ^TJPC_SubShapeIDPair;

  TJPC_ShapeCastSettings = record
    ActiveEdgeMode: TJPC_ActiveEdgeMode;
    CollectFacesMode: TJPC_CollectFacesMode;
    CollisionTolerance: single;
    PenetrationTolerance: single;
    ActiveEdgeMovementDirection: TJPC_Vec3;
    BackFaceModeTriangles: TJPC_BackFaceMode;
    BackFaceModeConvex: TJPC_BackFaceMode;
    UseShrunkenShapeAndConvexRadius: Tbool;
    ReturnDeepestPoint: Tbool;
  end;
  PJPC_ShapeCastSettings = ^TJPC_ShapeCastSettings;

  TJPC_CollideShapeSettings = record
    ActiveEdgeMode: TJPC_ActiveEdgeMode;
    CollectFacesMode: TJPC_CollectFacesMode;
    CollisionTolerance: single;
    PenetrationTolerance: single;
    ActiveEdgeMovementDirection: TJPC_Vec3;
    MaxSeparationDistance: single;
    BackFaceMode: TJPC_BackFaceMode;
  end;
  PJPC_CollideShapeSettings = ^TJPC_CollideShapeSettings;

  TJPC_ContactListenerFns = record
    OnContactValidate: function(self: pointer; inBody1: PJPC_Body; inBody2: PJPC_Body; inBaseOffset: TJPC_RVec3; inCollisionResult: PJPC_CollideShapeResult): TJPC_ValidateResult; cdecl;
    OnContactAdded: procedure(self: pointer; inBody1: PJPC_Body; inBody2: PJPC_Body; inManifold: PJPC_ContactManifold; ioSettings: PJPC_ContactSettings); cdecl;
    OnContactPersisted: procedure(self: pointer; inBody1: PJPC_Body; inBody2: PJPC_Body; inManifold: PJPC_ContactManifold; ioSettings: PJPC_ContactSettings); cdecl;
    OnContactRemoved: procedure(self: pointer; inSubShapePair: PJPC_SubShapeIDPair); cdecl;
  end;
  PJPC_ContactListenerFns = ^TJPC_ContactListenerFns;

  PJPC_ContactListener = type Pointer;

function JPC_ContactListener_new(self: pointer; fns: TJPC_ContactListenerFns): PJPC_ContactListener; cdecl; external joltc;
procedure JPC_ContactListener_delete(obj: PJPC_ContactListener); cdecl; external joltc;

const
  JPC_ContactPointsCapacity = 64;

type
  TJPC_Impulse = record
    ContactImpulse: single;
    FrictionImpulse1: single;
    FrictionImpulse2: single;
  end;
  PJPC_Impulse = ^TJPC_Impulse;

  TJPC_CollisionEstimationResult = record
    LinearVelocity1: TJPC_Vec3;
    AngularVelocity1: TJPC_Vec3;
    LinearVelocity2: TJPC_Vec3;
    AngularVelocity2: TJPC_Vec3;
    Tangent1: TJPC_Vec3;
    Tangent2: TJPC_Vec3;
    NumImpulses: Tuint;
    Impulses: array[0..63] of TJPC_Impulse;
  end;
  PJPC_CollisionEstimationResult = ^TJPC_CollisionEstimationResult;

procedure JPC_EstimateCollisionResponse(inBody1: PJPC_Body; inBody2: PJPC_Body; inManifold: PJPC_ContactManifold; outResult: PJPC_CollisionEstimationResult; inCombinedFriction: single;
  inCombinedRestitution: single; inMinVelocityForRestitution: single; inNumIterations: Tuint); cdecl; external joltc;

type
  PJPC_CastShapeCollector = type Pointer;

  TJPC_CastShapeCollectorFns = record
    Reset: procedure(self: pointer); cdecl;
    AddHit: procedure(self: pointer; base: PJPC_CastShapeCollector; Result: PJPC_ShapeCastResult); cdecl;
  end;
  PJPC_CastShapeCollectorFns = ^TJPC_CastShapeCollectorFns;
